[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/build-and-deploy/Deploy.gd" type="Script" id=1]
[ext_resource path="res://addons/build-and-deploy/Dock Script.gd" type="Script" id=2]
[ext_resource path="res://addons/build-and-deploy/Build.gd" type="Script" id=3]

[node name="Build&Deploy" type="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Build" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Build"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChannelsLabel" type="Label" parent="Build/VBoxContainer"]
margin_right = 1016.0
margin_bottom = 14.0
text = "Select which platforms you would like to build for, and fill in your project's name"
autowrap = true

[node name="Label" type="Label" parent="Build/VBoxContainer"]
margin_top = 18.0
margin_right = 1016.0
margin_bottom = 32.0
text = "Please Note: you will need to configure the EDITOR's export presets in the EDITOR's export menu"
autowrap = true

[node name="Game" type="LineEdit" parent="Build/VBoxContainer"]
margin_top = 36.0
margin_right = 1016.0
margin_bottom = 60.0
hint_tooltip = "If you already have the name of your game set in the export menu you can skip this step"
placeholder_text = "Game Name"

[node name="Windows" type="CheckBox" parent="Build/VBoxContainer"]
margin_top = 64.0
margin_right = 1016.0
margin_bottom = 88.0
text = "Windows"

[node name="Linux" type="CheckBox" parent="Build/VBoxContainer"]
margin_top = 92.0
margin_right = 1016.0
margin_bottom = 116.0
text = "Linux"

[node name="Mac" type="CheckBox" parent="Build/VBoxContainer"]
margin_top = 120.0
margin_right = 1016.0
margin_bottom = 144.0
text = "Mac"

[node name="HTML5" type="CheckBox" parent="Build/VBoxContainer"]
margin_top = 148.0
margin_right = 1016.0
margin_bottom = 172.0
text = "HTML5"

[node name="Async" type="CheckBox" parent="Build/VBoxContainer"]
margin_top = 176.0
margin_right = 1016.0
margin_bottom = 200.0
hint_tooltip = "when in pause mode (recommended) the editor will pause it's process until the build is finished (you will not be able to interact with the editor until butler is done)"
pressed = true
text = "Pause Mode"

[node name="SavePresets" type="Button" parent="Build/VBoxContainer"]
margin_top = 204.0
margin_right = 1016.0
margin_bottom = 224.0
hint_tooltip = "save currently selected presets to persistant storage"
text = "Save Presets"
align = 0

[node name="Build" type="Button" parent="Build/VBoxContainer"]
margin_top = 228.0
margin_right = 1016.0
margin_bottom = 248.0
text = "Build"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectDir" type="Button" parent="Build/VBoxContainer"]
visible = false
margin_top = 210.0
margin_right = 1016.0
margin_bottom = 230.0
text = "Click to select a directory"
align = 0

[node name="BuildDir" type="LineEdit" parent="Build/VBoxContainer"]
visible = false
margin_top = 210.0
margin_right = 1016.0
margin_bottom = 234.0
placeholder_text = "Path To Build Folder"

[node name="FileDialog" type="FileDialog" parent="Build"]
margin_right = 315.0
margin_bottom = 131.5
rect_min_size = Vector2( 250, 87.5 )
window_title = "Open a Directory"
resizable = true
dialog_text = "Select a Directory to Build into"
mode = 2
access = 2
current_dir = "/Users/aidan/Documents/figroot studios/godot-build-and-deploy-plugin"
current_path = "/Users/aidan/Documents/figroot studios/godot-build-and-deploy-plugin/"

[node name="Deploy" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Deploy"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButlerAcount" type="HBoxContainer" parent="Deploy/VBoxContainer"]
margin_right = 1016.0
margin_bottom = 20.0
custom_constants/separation = 10

[node name="Login" type="Button" parent="Deploy/VBoxContainer/ButlerAcount"]
margin_right = 106.0
margin_bottom = 20.0
text = "Login to Butler"
align = 0

[node name="Logout" type="Button" parent="Deploy/VBoxContainer/ButlerAcount"]
margin_left = 116.0
margin_right = 251.0
margin_bottom = 20.0
text = "Logout From Butler"

[node name="User" type="LineEdit" parent="Deploy/VBoxContainer"]
margin_top = 24.0
margin_right = 1016.0
margin_bottom = 48.0
placeholder_text = "Itch Username"

[node name="Game" type="LineEdit" parent="Deploy/VBoxContainer"]
margin_top = 52.0
margin_right = 1016.0
margin_bottom = 76.0
placeholder_text = "Itch Game"

[node name="SelectDir" type="Button" parent="Deploy/VBoxContainer"]
margin_top = 80.0
margin_right = 1016.0
margin_bottom = 100.0
text = "Click to select a directory"
align = 0

[node name="BuildDir" type="LineEdit" parent="Deploy/VBoxContainer"]
margin_top = 104.0
margin_right = 1016.0
margin_bottom = 128.0
placeholder_text = "Path To Build Folder"

[node name="ChannelsLabel" type="Label" parent="Deploy/VBoxContainer"]
margin_top = 132.0
margin_right = 1016.0
margin_bottom = 146.0
text = "Select which channels you would like to push to"
autowrap = true

[node name="Windows" type="CheckBox" parent="Deploy/VBoxContainer"]
margin_top = 150.0
margin_right = 1016.0
margin_bottom = 174.0
text = "Windows"

[node name="Linux" type="CheckBox" parent="Deploy/VBoxContainer"]
margin_top = 178.0
margin_right = 1016.0
margin_bottom = 202.0
text = "Linux"

[node name="Mac" type="CheckBox" parent="Deploy/VBoxContainer"]
margin_top = 206.0
margin_right = 1016.0
margin_bottom = 230.0
text = "Mac"

[node name="HTML5" type="CheckBox" parent="Deploy/VBoxContainer"]
margin_top = 234.0
margin_right = 1016.0
margin_bottom = 258.0
text = "HTML5"

[node name="Async" type="CheckBox" parent="Deploy/VBoxContainer"]
margin_top = 262.0
margin_right = 1016.0
margin_bottom = 286.0
hint_tooltip = "when in pause mode (recommended) the editor will pause it's process until butler is finished (you will not be able to interact with the editor until butler is done)"
pressed = true
text = "Pause Mode"

[node name="SavePresets" type="Button" parent="Deploy/VBoxContainer"]
margin_top = 290.0
margin_right = 1016.0
margin_bottom = 310.0
hint_tooltip = "save currently selected presets to persistant storage"
text = "Save Presets"
align = 0

[node name="ItchPush" type="Button" parent="Deploy/VBoxContainer"]
margin_top = 314.0
margin_right = 1016.0
margin_bottom = 334.0
text = "Push to Itch"
align = 0

[node name="FileDialog" type="FileDialog" parent="Deploy"]
margin_right = 315.0
margin_bottom = 131.5
rect_min_size = Vector2( 250, 87.5 )
window_title = "Open a Directory"
resizable = true
dialog_text = "Select a Directory to Deploy From (use the same Directory you set in the build menu)"
mode = 2
access = 2
current_dir = "/Users/aidan/Documents/figroot studios/godot-build-and-deploy-plugin"
current_path = "/Users/aidan/Documents/figroot studios/godot-build-and-deploy-plugin/"

[connection signal="pressed" from="Build/VBoxContainer/SavePresets" to="." method="_on_SavePresets_pressed"]
[connection signal="pressed" from="Build/VBoxContainer/Build" to="Build" method="_on_Build_pressed"]
[connection signal="pressed" from="Build/VBoxContainer/SelectDir" to="Build" method="_on_SelectDir_pressed"]
[connection signal="dir_selected" from="Build/FileDialog" to="Build" method="_on_FileDialog_dir_selected"]
[connection signal="pressed" from="Deploy/VBoxContainer/ButlerAcount/Login" to="Deploy" method="_on_Login_pressed"]
[connection signal="pressed" from="Deploy/VBoxContainer/ButlerAcount/Logout" to="Deploy" method="_on_Logout_pressed"]
[connection signal="pressed" from="Deploy/VBoxContainer/SelectDir" to="Deploy" method="_on_SelectDir_pressed"]
[connection signal="pressed" from="Deploy/VBoxContainer/SavePresets" to="." method="_on_SavePresets_pressed"]
[connection signal="pressed" from="Deploy/VBoxContainer/ItchPush" to="Deploy" method="_on_ItchPush_pressed"]
[connection signal="dir_selected" from="Deploy/FileDialog" to="Deploy" method="_on_FileDialog_dir_selected"]
